# dancinglinks

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  format.sh  license.txt  sudoku_solver.kdev4
src/: CMakeLists.txt  board.cpp  board.h  dancinglinks.cpp  dancinglinks.h  dancinglinks.h.autosave  dancinglinks_solver.cpp  dancinglinks_solver.h  main.cpp  serializer.cpp  serializer.h  solver.cpp  solver.h  sudoku_matrix.cpp  sudoku_matrix.h  utils.cpp  utils.h
test/: CMakeLists.txt  board_test.cpp  dancinglinks_integration_test.cpp  dancinglinks_solver_test.cpp  dancinglinks_test.cpp  data_test.cpp  serializer_test.cpp  solver_test.cpp  sudoku  sudoku99  utils.h
